# vimg

./: CMakeLists.txt  CMakePresets.json  gcc-trunk.docker  readme.md
examples/: example_from_json.cpp  example_from_pyclass.cpp  example_jsonrefl.cpp  example_rtmi.cpp  example_to_ddl.cpp  example_to_dot.cpp  example_to_json.cpp  example_validator.cpp  main.cpp
src/vimg/: char_arr.hpp  from_json.hpp  from_pyclass.hpp  jsonrefl.hpp  rtmi.hpp  to_ddl.hpp  to_dot.hpp  to_json.hpp  util.hpp  validator.hpp
